header section added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,58 @@
   <!--container start-->
   <div class="container">
     <!--header section start-->
-    <header>
-      
+    <header class="header">
+      <div class="wrapper">
+        <figure class="logo">
+          <a href="#FIXME" title="Haber">
+            <img src="/assets/css/haberlogo.png" alt="Haber">
+          </a>
+        </figure>
+        <nav class="navbar">
+          <ul class="nav-list">
+            <li>
+              <a href="#FIXME" title="Home">Home</a>
+            </li>
+            <li>
+              <a href="#FIXME" title="About">About</a>
+              <ul class="dropdown-list">
+                <li><a href="#FIXME" title="About Company">About Company</a></li>
+                <li><a href="#FIXME" title="About Client">About Client</a></li>
+                <li><a href="#FIXME" title="About Us">About Us</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#FIXME" title="Services">Services</a>
+            </li>
+            <li>
+              <a href="#FIXME" title="Projects">Projects</a>
+            </li>
+            <li>
+              <a href="#FIXME" title="Our Blog">Our Blog</a>
+            </li>
+            <li>
+              <a href="#FIXME" title="Contacts">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="social-links">
+          <li>
+            <a class="icons twitter" href="#FIXME" title="Twitter" rel="noopener noreferrer">Twitter</a>
+          </li>
+          <li>
+            <a class="icons outube" href="#FIXME" title="Youtube" rel="noopener noreferrer">Youtube</a>
+          </li>
+          <li>
+            <a class="icons wifi" href="#FIXME" title="Wifi" rel="noopener noreferrer">Wifi</a>
+          </li>
+          <li>
+            <a class="icons facebook" href="#FIXME" title="Facebook" rel="noopener noreferrer">Facebook</a>
+          </li>
+          <li>
+            <a class="icons google" href="#FIXME" title="Google+" rel="noopener noreferrer">Google+</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <!--header section end-->
 
