banner section added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
 
     <!--main section start-->
     <main>
+      <!-- banner section start  -->
+      <section class="banner-section">
+        <div class="wrapper">
+          <figure class="banner-img">
+            <img src="https://dummyimage.com/1301x475/44a65e/fff" alt="Banner Image">
+          </figure>
+          <ul class="banner-content">
+            <li class="banner-headline">We meet your financial investment needs</li>
+            <li class="banner-headline">We meet your financial investment needs</li>
+            <li class="banner-headline">We meet your financial investment needs</li>
+          </ul>
+      </section>
+      <!-- banner section end  -->
 
     </main>
     <!--main section end-->
