features section added

--- a/index.html
+++ b/index.html
@@ -83,6 +83,48 @@
       </section>
       <!-- banner section end  -->
 
+      <!-- main feature section start  -->
+      <section class="feature-section">
+        <div class="wrapper">
+          <h2 class="main-heading">Our Focus Is Our Client's Success</h2>
+          <ul class="feature list">
+            <li class="feature-item">
+              <span class="icon gallery-icon">Gallery icon</span>
+              <h3 class="sub-heading">Private Banking</h3>
+              <p class="feature-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique deserunt totam iusto corporis expedita a hic consequatur numquam, deleniti eligendi praesentium laudantium voluptatibus harum, quos enim.</p>
+              <div class="learn-btn">
+                <a href="#FIXME" title="Learn More">Learn More</a>
+              </div>
+            </li>
+            <li class="feature-item">
+              <span class="icon graph-icon">Graph icon</span>
+              <h3 class="sub-heading">Time Saving Tips</h3>
+              <p class="feature-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique deserunt totam iusto corporis expedita a hic consequatur numquam, deleniti eligendi praesentium laudantium voluptatibus harum, quos enim.</p>
+              <div class="learn-btn">
+                <a href="#FIXME" title="Learn More">Learn More</a>
+              </div>
+            </li>
+            <li class="feature-item">
+              <span class="icon money-icon">Money icon</span>
+              <h3 class="sub-heading">Budgeting Tips</h3>
+              <p class="feature-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique deserunt totam iusto corporis expedita a hic consequatur numquam, deleniti eligendi praesentium laudantium voluptatibus harum, quos enim.</p>
+              <div class="learn-btn">
+                <a href="#FIXME" title="Learn More">Learn More</a>
+              </div>
+            </li>
+            <li class="feature-item">
+              <span class="icon globe-icon">Half Globe</span>
+              <h3 class="sub-heading">Money Saving Ideas</h3>
+              <p class="feature-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique deserunt totam iusto corporis expedita a hic consequatur numquam, deleniti eligendi praesentium laudantium voluptatibus harum, quos enim.</p>
+              <div class="learn-btn">
+                <a href="#FIXME" title="Learn More">Learn More</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- feature section end  -->
+
     </main>
     <!--main section end-->
 
