advice-section added

--- a/index.html
+++ b/index.html
@@ -125,6 +125,47 @@
       </section>
       <!-- feature section end  -->
 
+      <!-- advice section start  -->
+      <section class="advice-section">
+        <div class="wrapper">
+          <h2 class="main-heading">Advice On How To Make Wise Investment</h2>
+          <p class="advice-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos laudantium dolore voluptas, sed veritatis tenetur deserunt at quia. Placeat, quia! Ipsa vero nisi nobis minus assumenda praesentium enim, corrupti blanditiis rem odit!</p>
+          <ul class="advice-list">
+            <li class="advice-items">
+              <figure class="advice-img">
+                <img src="https://dummyimage.com/354x205/577a7d/fff" alt="Advice images">
+              </figure>
+              <h3 class="advice-heading">Aut perferendis</h3>
+              <p class="advice-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At harum, delectus voluptate recusandae, deleniti omnis eos blanditiis magnam sed impedit ipsam quos facere.</p>
+              <span class="arrow-icon">
+                <a href="#FIXME" title="Arrow Icon">Arrow Icon</a>
+              </span>
+            </li>
+            <li class="advice-items">
+              <figure class="advice-img">
+                <img src="https://dummyimage.com/354x205/577a7d/fff" alt="Advice images">
+              </figure>
+              <h3 class="advice-heading">Aut perferendis</h3>
+              <p class="advice-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At harum, delectus voluptate recusandae, deleniti omnis eos blanditiis magnam sed impedit ipsam quos facere.</p>
+              <span class="arrow-icon">
+                <a href="#FIXME" title="Arrow Icon">Arrow Icon</a>
+              </span>
+            </li>
+            <li class="advice-items">
+              <figure class="advice-img">
+                <img src="https://dummyimage.com/354x205/577a7d/fff" alt="Advice images">
+              </figure>
+              <h3 class="advice-heading">Aut perferendis</h3>
+              <p class="advice-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At harum, delectus voluptate recusandae, deleniti omnis eos blanditiis magnam sed impedit ipsam quos facere.</p>
+              <span class="arrow-icon">
+                <a href="#FIXME" title="Arrow Icon">Arrow Icon</a>
+              </span>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- advice section ends  -->
+
     </main>
     <!--main section end-->
 
