key section added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <li class="banner-headline">We meet your financial investment needs</li>
             <li class="banner-headline">We meet your financial investment needs</li>
           </ul>
+        </div>
       </section>
       <!-- banner section end  -->
 
@@ -165,6 +166,53 @@
         </div>
       </section>
       <!-- advice section ends  -->
+
+      <!-- Key  section start -->
+      <section class="key-section">
+        <div class="wrapper">
+          <div class="left-section">
+            <h2 class="main-heading">Fresh Investment Solutions!</h2>
+            <ul class="points-list">
+              <li class="point-items">
+                <span class="setting-icon">Setting Icon</span>Dolor sit amet, consectetur adipisicing Sed do eiusmod tempor incididunt ut labore
+              </li>
+              <li class="point-items">
+                <span class="setting-icon">Setting Icon</span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              </li>
+              <li class="point-items">
+                <span class="setting-icon">Setting Icon</span>Lorem ipsum dolor sit amet consectetur.
+              </li>
+              <li class="point-items">
+                <span class="setting-icon">Setting Icon</span>Lorem ipsum dolor sit.
+              </li>
+            </ul>
+            <div class="learn-btn">
+              <a href="#FIXME" title="Learn More">Learn More</a>
+            </div>
+          </div>
+          <div class="right-section">
+            <h2 class="main-heading">Learning to Save Money</h2>
+            <ul class="points-list">
+              <li class="point-items">
+                <span class="setting-icon">Setting Icon</span>Lorem ipsum dolor, sit amet consectetur adipisicing
+              </li>
+              <li class="point-items">
+                <span class="setting-icon">Setting Icon</span>Lorem ipsum dolor sit amet consectetur.
+              </li>
+              <li class="point-items">
+                <span class="setting-icon">Setting Icon</span>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </li>
+            </ul>
+            <p class="right-para">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, facilis! Consequatur, laborum nostrum. Voluptatum quibusdam deserunt repudiandae accusantium eum omnis magni laudantium voluptas? Rem adipisci similique inventore.
+            </p>
+            <div class="learn-btn">
+              <a href="#FIXME" title="Learn More">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- key section end  -->
 
     </main>
     <!--main section end-->
