--- a/index.html
+++ b/index.html
@@ -214,6 +214,48 @@
       </section>
       <!-- key section end  -->
 
+      <!-- partner section start  -->
+      <section class="partner-section">
+        <div class="wrapper">
+          <ul class="partner-img-list">
+            <li class="partner-logo">
+              <img src="https://dummyimage.com/190x75/c0bade/fff" alt="Partner Logo">
+            </li>
+            <li class="partner-logo">
+              <img src="https://dummyimage.com/190x75/c0bade/fff" alt="Partner Logo">
+            </li>
+            <li class="partner-logo">
+              <img src="https://dummyimage.com/190x75/c0bade/fff" alt="Partner Logo">
+            </li>
+            <li class="partner-logo">
+              <img src="https://dummyimage.com/190x75/c0bade/fff" alt="Partner Logo">
+            </li>
+            <li class="partner-logo">
+              <img src="https://dummyimage.com/190x75/c0bade/fff" alt="Partner Logo">
+            </li>
+            <li class="partner-logo">
+              <img src="https://dummyimage.com/190x75/c0bade/fff" alt="Partner Logo">
+            </li>
+            <li class="partner-logo">
+              <img src="https://dummyimage.com/190x75/c0bade/fff" alt="Partner Logo">
+            </li>
+            <li class="partner-logo">
+              <img src="https://dummyimage.com/190x75/c0bade/fff" alt="Partner Logo">
+            </li>
+            <li class="partner-logo">
+              <img src="https://dummyimage.com/190x75/c0bade/fff" alt="Partner Logo">
+            </li>
+          </ul>
+          <div class="arrow">
+            <span class="arrow-left" >Left Arrow</span>
+          </div>
+          <div class="arrow">
+            <span class="arrow-right" >Right Arrow</span>
+          </div>
+        </div>
+      </section>
+      <!-- partner section end -->
+
     </main>
     <!--main section end-->
 
