contact section added

--- a/index.html
+++ b/index.html
@@ -256,6 +256,46 @@
       </section>
       <!-- partner section end -->
 
+      <!-- contact section start -->
+      <section class="contact-section">
+        <div class="wrapper">
+          <h2 class="contact-heading">Quick Contact</h2>
+          <div class="contact-form">
+            <form action="#FIXME" method="get">
+                <div class="form-left">
+                <div class="form-input">
+                  <input type="text" placeholder="Name:">
+                </div>
+                <div class="form-input">
+                  <input type="email" placeholder="Email:">
+                </div>
+                <div class="form-input">
+                  <input type="number" placeholder="Phone:">
+                </div>
+              </div>
+              <div class="form-right">
+                <textarea name="message" cols="30" rows="10" placeholder="Message"></textarea>
+              </div>
+              <input class="form-btn" type="submit" value="Send">
+              </form>
+          </div>
+          <div class="contact-links">
+            <ul class="contact-list">
+              <li class="contact-item">
+                <a href="#FIXME" title="Newyork 9870 ST">New York 9870 ST Vincent Glasgow</a>
+              </li>
+              <li class="contact-item">
+                <a href="mailto:contact@demolink.org" title="Contact@demolink.org">Contact@demolink.org</a>
+              </li>
+              <li class="contact-item">
+                <a href="tel:+18006036035" title="Call Us">Call Us: +1 800 603 6035</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- contact section end -->
+
     </main>
     <!--main section end-->
 
