partner section changes

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <!-- key section end  -->
 
       <!-- partner section start  -->
-      <section class="partner-section">
+      <div class="partner-section">
         <div class="wrapper">
           <ul class="partner-img-list">
             <li class="partner-logo">
@@ -253,7 +253,7 @@
             <span class="arrow-right" >Right Arrow</span>
           </div>
         </div>
-      </section>
+      </div>
       <!-- partner section end -->
 
       <!-- contact section start -->
