banner section heading updated

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <img src="https://dummyimage.com/1301x475/44a65e/fff" alt="Banner Image">
           </figure>
           <ul class="banner-content">
-            <li class="banner-headline">We meet your financial investment needs</li>
-            <li class="banner-headline">We meet your financial investment needs</li>
-            <li class="banner-headline">We meet your financial investment needs</li>
+            <li class="banner-headline"><h3 class="banner-heading">We meet your financial investment needs</h3></li>
+            <li class="banner-headline"><h3 class="banner-heading">We meet your financial investment needs</h3></li>
+            <li class="banner-headline"><h3 class="banner-heading">We meet your financial investment needs</h3></li>
           </ul>
         </div>
       </section>
