--- a/index.html
+++ b/index.html
@@ -295,13 +295,38 @@
         </div>
       </section>
       <!-- contact section end -->
-
     </main>
     <!--main section end-->
 
     <!--footer section start-->
-    <footer>      
-
+    <footer class="footer">      
+      <p class="copyright"><span class="logo">Haber</span>&copy; 2018 Privacy Policy</p>
+      <ul class="footer-social">
+        <li>
+          <a class="footer-icon t" href="#FIXME" title="T" target="_blank" rel="noopener noreferrer">T</a>
+        </li>
+        <li>
+          <a class="footer-icon twitter" href="#FIXME" title="Twitter" target="_blank" rel="noopener noreferrer">Twitter</a>
+        </li>
+        <li>
+          <a class="footer-icon youtube" href="#FIXME" title="Youtube" target="_blank" rel="noopener noreferrer">Youtube</a>
+        </li>
+        <li>
+          <a class="footer-icon wifi" href="#FIXME" title="Wifi" target="_blank" rel="noopener noreferrer">Wifi</a>
+        </li>
+        <li>
+          <a class="footer-icon facebook" href="#FIXME" title="Facebook" target="_blank" rel="noopener noreferrer">Facebook</a>
+        </li>
+        <li>
+          <a class="footer-icon google" href="#FIXME" title="Google+" target="_blank" rel="noopener noreferrer">Google+</a>
+        </li>
+      </ul>
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.080363658705!2d72.9501913497568!3d19.19169198695797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b96f0b099f21%3A0xc978277a19452515!2sSunrise%20Business%20Park!5e0!3m2!1sen!2sin!4v1664459419320!5m2!1sen!2sin"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
     </footer>
     <!--footer section end-->
 
