control btn  added in banner

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             <li class="banner-headline"><h3 class="banner-heading">We meet your financial investment needs</h3></li>
             <li class="banner-headline"><h3 class="banner-heading">We meet your financial investment needs</h3></li>
           </ul>
+          <div class="control">
+            <span class="prev-btn">Previous Btn</span>
+            <span class="next-btn">Next Btn</span>
+          </div>
         </div>
       </section>
       <!-- banner section end  -->
