menu toggle added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             </li>
           </ul>
         </nav>
+        <div class="menu-toggle">
+          <span class="bar bar1">bar</span>
+          <span class="bar bar2">bar</span>
+          <span class="bar bar3">bar</span>
+        </div>
         <ul class="social-links">
           <li>
             <a class="icons twitter" href="#FIXME" title="Twitter" target="_blank" rel="noopener noreferrer">Twitter</a>
